fixes #9 anchor jump offset

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -62,10 +62,10 @@ a { text-decoration: none; }
 .center { text-align: center; }
 .small { font-size: 0.6em; }
 
-.toc-container { text-align: center; }
-.toc-container { margin: 2em 0; }
-.toc { text-align: left; }
-.toc { display: inline-block; }
+.toc { text-align: center; }
+.toc { margin: 2em 0; }
+.toc ul { text-align: left; }
+.toc ul { display: inline-block; }
 
 .toc li { list-style: none; }
 .toc li { text-underline: none; }
@@ -78,7 +78,12 @@ a { text-decoration: none; }
 .intro .author { font-size: 0.9em; }
 .intro .publisher { font-size: 0.9em; }
 
+
 .main.nav { position: fixed; top: 0px; width: 100%; z-index: 90; }
 .main.nav { box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.13); }
 .main.nav a { margin-right: 2em; }
+
+/* main nav offset fix */
+a, .toc, .anchor { margin-top: -2em; padding-top: 2em; }
+a[href] { margin-top: unset; padding-top: unset; }
 
